# clearenv

./: LICENSE  Makefile  README.md  clearenv.1  clearenv.c
c-lang/: Makefile
c-lang/djb/: str_diff.c
djb/: byte_copy.c  str.h  str_chr.c  str_len.c  str_start.c
go-lang/: .mise.toml  Makefile  clearenv.go
rust-lang/: Cargo.toml  Makefile
rust-lang/src/: main.rs
swift-lang/: Makefile
swift-lang/Sources/: main.swift
zig-lang/: Makefile  build.zig
zig-lang/src/: clearenv.zig
